Fixed the content rendering so that markdown will be filled directly into the template as needed.  Content has its own scrollbar and the overall page will not have any overflow.  Hopefully also fixed the issue with the live site pulling the wrong filepath

--- a/public/base.css
+++ b/public/base.css
@@ -2,10 +2,25 @@
     background-color: whitesmoke;
     padding:0;
     margin:0;
+    overflow:hidden;
+}
+
+.Content {
+    position:absolute;
+    left: 10vw;
+    top: 10vh;
+    width: 88vw;
+    height: 88vh;
+    padding: 1%;
+    overflow-y:auto;
+}
+
+.Content *{
+    background-color:inherit;
 }
 
 .Header {
-    position:sticky;
+    position:absolute;
     top:0vh;
     left:0vw;
     height:10vh; 
@@ -22,27 +37,17 @@
 }
 
 .Sidebar {
-    position:sticky;
-    padding-left: 1vw;
+    position:absolute;
+    padding: 1vw 0 0 1.5vw;
     top:10vh;
     left:0vw;
     height:90vh;
-    width: 10vw;
+    width: 8.5vw;
     background-color:aqua;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    align-content:flex-start
 }
 
 .Sidebar *{
+    overflow:visible;
     background-color:inherit;
-}
-
-.Sidebar ul{
-    padding-inline-start: 3vh;
-}
-
-.content {
-    background-color: black;
-    width: 100vw;
-    height: 100vh;
 }
